karnc/tests/fixtures/negative/148_adapter_consumes_cycle/src/alpha.binding.ts
import type { A } from "./alpha.js";
export class AImpl implements A {
  async a(): Promise<number> { return 0; }
}
